--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Mongo
+localhost.*
+localhost_files/
+
 # End of https://www.gitignore.io/api/osx,node
